# Franka_emika_control_and_motion_planning

./: .gitmodules  CMakeLists.txt  README.md
data/: trajectory_log.csv
src/: main.cpp  main_my.cpp  vizualize.py
